<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".controller.InProgressFragment">

  <LinearLayout
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginHorizontal="@dimen/half_static_spacing"
    android:layout_marginBottom="@dimen/half_static_spacing"
    android:layout_marginTop="@dimen/half_dynamic_spacing"
    android:padding="@dimen/half_static_spacing"
    android:gravity="bottom"
    android:baselineAligned="false"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
      android:id="@+id/last_played"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="5"
      android:layout_margin="@dimen/half_static_spacing"
      android:text="@string/last_played"/>

    <TextView
      android:id="@+id/pool_size"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="2"
      android:layout_margin="@dimen/half_static_spacing"
      android:textAlignment="textEnd"
      android:text="@string/pool_size"/>

    <TextView
      android:id="@+id/code_length"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="2"
      android:layout_margin="@dimen/half_static_spacing"
      android:textAlignment="textEnd"
      android:text="@string/code_length"/>

    <TextView
      android:id="@+id/guess_count"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="3"
      android:layout_margin="@dimen/half_static_spacing"
      android:textAlignment="textEnd"
      android:text="@string/guess_count"/>

  </LinearLayout>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/summaries"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="vertical"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    app:layout_constraintTop_toBottomOf="@id/header"
    app:layout_constraintBottom_toBottomOf="parent"
    tools:listitem="@layout/item_game_summary"/>

</androidx.constraintlayout.widget.ConstraintLayout>